<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartActivity">

    <ImageView
            android:src="@drawable/ic_account"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center"
            android:layout_width="@dimen/icon_dim"
            android:layout_height="@dimen/icon_dim"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                android:hint="@string/type_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_username"
                android:hint="@string/type_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:hint="@string/type_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_action"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    <TextView
            android:id="@+id/text_action"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#F55"
            android:clickable="true"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</LinearLayout>