<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_title"
                android:hint="@string/note_title"
                android:layout_margin="@dimen/margin"
                android:textSize="18sp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_desc"
                android:layout_margin="@dimen/margin"
                android:hint="@string/note_description"
                android:layout_width="match_parent"
                android:minLines="5"
                android:maxLines="20"
                android:textSize="14sp"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
            android:layout_margin="@dimen/margin"
            android:id="@+id/urgent_switch"
            android:text="@string/urgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
